--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,11 @@
     "version": "1.0",
     "minimum_chrome_version": "10.0",
     "devtools_page": "devtools.html",
+    "permissions": ["tabs", "*://meet.google.com/*"],
+    "background": {
+      "scripts": ["background.js"],
+      "persistent": false
+    },
     "icons": {
       "16": "images/icon16.png",
       "32": "images/icon32.png",
